[tool.poetry]
name = "workout-api"
version = "0.1.0"
description = ""
authors = ["gcarpaneze"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.2"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
